buildscript {
    ext {
        springBootVersion = '2.1.1.RELEASE'
    }
    repositories {
        jcenter()
        mavenCentral()
    }
    dependencies {
        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
    }

}

apply plugin: 'java'
apply plugin: 'org.springframework.boot'
apply plugin: 'io.spring.dependency-management'
apply plugin: 'groovy'

repositories {
    mavenCentral()
}

project.sourceCompatibility = 11
project.targetCompatibility = 11

def applicationName = 'prisonstaffhub-api'
def today = java.time.Instant.now()
def todayDate = java.time.LocalDate.now()
def formatter = java.time.format.DateTimeFormatter.ofPattern("yyyy-MM-dd")
group = 'uk.gov.justice.digital.hmpps'
version todayDate.format(formatter)

jar {
    baseName = applicationName
    manifest {
        attributes 'Implementation-Title': applicationName,
                'Implementation-Version': System.getenv('CI') ? "${version}.${System.getenv('CIRCLE_BUILD_NUM')}" : version
    }
}

springBoot {
    buildInfo {
        properties {
            artifact = rootProject.name
            version = System.getenv('CI') ? "${version}.${System.getenv('CIRCLE_BUILD_NUM')}" : version
            group = 'uk.gov.justice.digital.hmpps'
            name = rootProject.name
            time = today
            additional = [
                    by                   : System.properties['user.name'],
                    operatingSystem      : "${System.properties['os.name']} (${System.properties['os.version']})",
                    continuousIntegration: System.getenv('CI') ? true : false,
                    machine              : InetAddress.localHost.hostName
            ]
        }
    }
}

configurations {
    compile.exclude  module: "tomcat-jdbc"
}

dependencies {
    annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
    annotationProcessor('org.projectlombok:lombok:1.18.4')

    compile("org.springframework.boot:spring-boot-starter-web")
    compile("org.springframework.boot:spring-boot-devtools")
    compile("org.springframework.boot:spring-boot-starter-actuator")
    compile("org.springframework.boot:spring-boot-starter-data-jpa")
    compile("org.springframework.boot:spring-boot-starter-cache")

    compile("org.springframework.boot:spring-boot-starter-security")
    compile("org.springframework.security.oauth:spring-security-oauth2:2.3.4.RELEASE")
    compile("org.springframework.security:spring-security-jwt:1.0.9.RELEASE")

    compile group: 'org.apache.camel', name: 'camel-spring-boot', version: '2.23.0'
    compile group: 'org.apache.camel', name: 'camel-quartz2', version: '2.23.0'

    compile("org.springframework.boot:spring-boot-starter-quartz:${springBootVersion}")
    compile("org.hibernate:hibernate-java8")

    compile("net.logstash.logback:logstash-logback-encoder:5.2")
    compile("com.microsoft.azure:applicationinsights-logging-logback:2.3.1")
    compile("com.microsoft.azure:applicationinsights-spring-boot-starter:1.1.1")

    compile 'javax.annotation:javax.annotation-api:1.3.2'
    compile 'javax.xml.bind:jaxb-api:2.3.0'
    compile 'com.sun.xml.bind:jaxb-impl:2.3.0'
    compile 'com.sun.xml.bind:jaxb-core:2.3.0'
    compile 'javax.activation:activation:1.1.1'
    compile('javax.transaction:javax.transaction-api:1.3')

    compile 'io.springfox:springfox-swagger2:2.9.2'
    compile 'io.springfox:springfox-swagger-ui:2.9.2'

    compile("io.jsonwebtoken:jjwt:0.9.1")

    compile("net.sf.ehcache:ehcache:2.10.6")
    compile("org.apache.commons:commons-lang3:3.8.1")
    compile("org.apache.commons:commons-text:1.6")
    compile("com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.9.8")
    compile("com.pauldijou:jwt-core_2.11:0.15.0")
    compileOnly('org.projectlombok:lombok:1.18.4')

    runtime('org.hsqldb:hsqldb:2.4.1')
    runtime("org.flywaydb:flyway-core:5.2.4")
    runtime("org.postgresql:postgresql:42.2.5")

    testCompile("org.springframework.boot:spring-boot-starter-test")
    testCompile("org.assertj:assertj-core:3.11.1")
    testCompile 'org.codehaus.groovy:groovy-all:2.5.4'
    testCompile 'org.spockframework:spock-spring:1.2-groovy-2.5'
    testCompile('org.spockframework:spock-core:1.2-groovy-2.5') {
        exclude group: "org.codehaus.groovy"
    }

    testCompile 'org.gebish:geb-core:2.2'
    testCompile 'org.gebish:geb-spock:2.2'
    testCompile 'org.seleniumhq.selenium:selenium-support:3.12.0'
    testCompile 'org.seleniumhq.selenium:selenium-chrome-driver:3.12.0'
    testCompile 'org.seleniumhq.selenium:selenium-firefox-driver:3.12.0'
    testCompile 'io.github.http-builder-ng:http-builder-ng-apache:1.0.3'

    testCompile 'com.github.tomakehurst:wiremock-standalone:2.15.0'
    testCompile 'com.github.tomjankes:wiremock-groovy:0.2.0'
    testCompile 'org.spockframework:spock-spring:1.1-groovy-2.4'
    testCompile 'org.spockframework:spock-core:1.1-groovy-2.4'
    testCompile group: 'org.apache.camel', name: 'camel-test-spring', version: '2.23.0'
}
